placed blob background behind the contact form, fixed contact form spacing, fixed blobspacing, added stay in touch section with altered heading text, and added mqs for contact form for responsive modes.

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ Variables (colors, text, spacing, etc.)
 	/* Color Definitions */
 	--color-white: #fff;
 	--color-black: #000;
-	--color-beige: #F5F5DC;
+	--color-beige: #f5f5dc;
 	--color-navy: #000080;
 	--color-neutral-gray: #ccc;
 	--color-transparent-white: #ffffff2d;
@@ -70,9 +70,9 @@ Variables (colors, text, spacing, etc.)
 	/* Border Radius */
 	--radius-sm: 10px;
 	--radius-md: 20px;
-	
+
 	/* Wrappers */
-	--wrapper-max: 1400px
+	--wrapper-max: 1400px;
 
 	/* Media Queries */
 }
@@ -196,7 +196,7 @@ header {
 	align-items: center;
 }
 
-.top-logo p{
+.top-logo p {
 	font-family: var(--main-heading-font);
 	font-weight: 700;
 }
@@ -209,7 +209,6 @@ header {
 	display: flex;
 	align-items: center;
 	padding-left: 0;
-	
 }
 
 .top-links li {
@@ -268,7 +267,6 @@ header {
 	background: linear-gradient(to right, rgba(0, 0, 0, 0.368), transparent 70%);
 }
 
-
 /* HOMEPAGE MAIN CONTENT */
 .homepage-content {
 	width: 80%;
@@ -323,9 +321,30 @@ button {
 }
 
 /* contact form */
+.contact-section {
+	width: 95%;
+	max-width: 1600px;
+	margin: 0 auto;
+	padding: 163px 0px;
+	background-image: url(./assets/team-blob.svg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	display: flex;
+	flex-direction: column;
+}
 .form-title {
 	text-align: center;
+	margin-bottom: 45px;
 }
+
+.form-title p {
+	max-width: 600px;
+	width: 85%;
+	margin: 0 auto;
+	text-align: center;
+}
+
 .form-info {
 	text-align: center;
 }
@@ -342,11 +361,12 @@ button {
 .contact-form input,
 .contact-form textarea {
 	font-family: var(--body-font);
-	width: 70%;
-	max-width: 500px;
+	width: 85%;
+	max-width: 600px;
 	border: none;
 	border-radius: 4px;
-	padding: var(--spacing-sm);
+	margin-bottom: 15px;
+	padding: 20px;
 	background-color: var(--color-white);
 }
 
@@ -393,6 +413,18 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 	}
 }
 
+/* contact page mq */
+@media (max-width: 1140px) {
+	.contact-section {
+		width: 100%;
+		background-size: cover;
+	}
+
+	.stay-updated {
+		margin: 150px auto;
+	}
+}
+
 /* Tablet & Smaller */
 @media (max-width: 768px) {
 }
@@ -401,7 +433,7 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 @media (min-width: 768px) and (max-width: 1024px) {
 	.hero-text {
 		padding: 70px 90px;
-    	width: 500px;
+		width: 500px;
 	}
 
 	.hero-text h1 {
